Improved form validation

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.6.0",
     "jsonwebtoken": "^8.5.1",
+    "libphonenumber-js": "^1.7.55",
     "mongoose": "^5.9.25",
     "uuid": "^8.2.0"
   },
